7106774: JSR 292: nightly test inlineMHTarget fails with wrong result

Reviewed-by: kvn